# Trend_Arbitrage_-_Zero-Day_Response

./: .env.example  .gitignore  BRAND.md  CLAUDE.md  Dockerfile.streaming  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_alert_rules.py  003_mpi_history.py  004_source_weights.py  005_api_keys.py  006_audience_sync_log.py  007_playbook_runs.py  008_performance_events.py  009_stream_offsets.py
alerting/: config.py  notifier.py
api/: auth.py  db.py  main.py
api/middleware/: rate_limit.py
api/routers/: alerts.py  auth.py  demo.py  history.py  mpi.py  performance.py  playbooks.py  segments.py  signals.py
api/schemas/: models.py
config/: audience_mapping.json  mpi_weights.json  playbooks.json  rss_feeds.json  scraper_targets.json  source_weights.json  streaming.json
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
docs/: architecture.md  data_dictionary.md
etl/: models.py
etl/dags/: calibration_dag.py  golden_record_dag.py  semantic_enrichment_dag.py
ingestion/: dedup.py  models.py
integrations/: _sync_log.py  audience_mapper.py  google_ads.py  meta_ads.py  performance_collector.py
playbooks/: engine.py
predictive/: golden_record_generator.py  mpi_archiver.py  mpi_calculator.py  threshold_calibrator.py  threshold_monitor.py
scripts/: postgres-init.sh  seed_demo_data.py
streaming/: _offsets.py  classifier_stream.py  golden_record_stream.py  mpi_stream.py
(+37 files in other folders)
